<resources>
    <string name="app_name">indoor-locator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_select_floor_plan">Select Floor Plan</string>
    <string name="prompt_floor_plan">Floor plan</string>
    <string name="hint_floor_plan">Floor plan name</string>
    <string name="action_select_floor_plan">Select</string>
    <string name="action_register">Add New</string>
    <string name="header_add_floor_plan">Add Floor Plan</string>
    <string name="prompt_name">Name</string>
    <string name="hint_floor_plan_name">Floor Plan Name</string>
    <string name="prompt_add_floor_plan">add</string>
    <string name="header_wellcome">Wellcome to Indoor Locator</string>
    <string name="no_floor_plans"><![CDATA[<No Floor Plans available>]]></string>
    <string name="select_image">Select image</string>
    <string name="magnetic_x">Magnetic field (x)</string>
    <string name="magnetic_y">Magnetic field (y)</string>
    <string name="magnetic_z">Magnetic field (z)</string>
    <string name="rotation_x">Rotation (X axis)</string>
    <string name="rotation_z">Rotation (Z axis)</string>
    <string name="rotation_y">Rotation (Y axis)</string>
    <string name="located_point">located point</string>
    <string name="locate">locate</string>
    <string name="rssi">rssi</string>
    <string name="distance">distance</string>
    <string name="floorplan_add_location_description">Touch the floorplan image to add a location</string>
</resources>
