<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mooo.sestus.indoor_locator.addfloorplan.AddFloorPlanFragment"
    android:id="@+id/root_add_floor_plan_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    >

    <ScrollView
        android:id="@+id/scv_add_floor_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/cont_add_floor_plan_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            >

            <TextView
                android:id="@+id/lbl_create_header"
                style="@style/Label.FloorPlanHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/header_add_floor_plan" />

            <TextView
                android:id="@+id/lbl_add_floor_plan_name_sub"
                style="@style/Label.Sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_create_header"
                android:text="@string/prompt_name" />

            <EditText
                android:id="@+id/edt_add_floor_plan_name"
                style="@style/InputField.Id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_add_floor_plan_name_sub"
                android:gravity="center_horizontal"
                android:hint="@string/hint_floor_plan_name" />


            <Button
                android:id="@+id/btn_create_account"
                style="@style/Button.Flat.Primary"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_below="@+id/edt_add_floor_plan_name"
                android:layout_centerHorizontal="true"
                android:text="@string/prompt_add_floor_plan" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>