<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_select_floor_plan_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.mooo.sestus.indoor_locator.selectfloorplan.SelectFloorPlanFragment">

    <RelativeLayout
        android:id="@+id/cont_select_floor_plan_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            style="@style/Label.FloorPlanHeader"
            android:id="@+id/lbl_floor_plan_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_select_floor_plan"
            android:layout_marginTop="16dp"
            android:gravity="center"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/floor_plans_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Floor Plan"
            android:textColorHint="@color/colorWhite"
            app:met_floatingLabel="normal"
            android:layout_below="@id/lbl_floor_plan_header"
            android:gravity="center_horizontal"/>

        <Button
            style="@style/Button.Flat.Primary"
            android:id="@+id/btn_select_floor_plan"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/action_select_floor_plan"
            android:layout_marginTop="16dp"
            android:layout_below="@id/floor_plans_spinner"
            android:layout_centerHorizontal="true"/>

        <Button
            style="@style/Button.Flat.Primary"
            android:id="@+id/btn_add_floor_plan"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/action_register"
            android:layout_marginTop="16dp"
            android:layout_below="@id/btn_select_floor_plan"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>



    <ProgressBar
        android:id="@+id/pro_floor_plan_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"/>

</FrameLayout>
